@@ -24,6 +24,10 @@ Release 0.20.3 - Unreleased
                hbase.version
    HBASE-2054  memstore size 0 is >= than blocking -2.0g size
    HBASE-2057  Cluster won't stop 
+   HBASE-2064  Cannot disable a table if at the same the Master is moving 
+               its regions around
+   HBASE-2065  Cannot disable a table if any of its region is opening 
+               at the same time
 
   IMPROVEMENTS
    HBASE-1961  HBase EC2 scripts
@@ -52,6 +56,8 @@ Release 0.20.3 - Unreleased
                Andrew Purtell)
    HBASE-2028  Add HTable.incrementColumnValue support to shell (Lars George
                via Andrew Purtell)
+   HBASE-1982  [EC2] Handle potentially large and uneven instance startup
+               times
 
 Release 0.20.2 - November 18th, 2009
   INCOMPATIBLE CHANGES
